--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,1 +1,6 @@
-{"image":"mcr.microsoft.com/devcontainers/universal:2"}
+{
+    "image": "mcr.microsoft.com/devcontainers/universal:2",
+    "forwardPorts": [
+        1313
+    ],
+}
